--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 </div>
             </div>            <div class="col-md-4 mb-4">
                 <div class="card">
-                    <img src="청소기.jpeg" class="card-img-top" alt="청소기">
+                    <img src="./cleaner.jpeg" class="card-img-top" alt="청소기">
                     <div class="card-body">
                         <h5 class="card-title">청소기</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">15만원</h6>
-                        <p class="card-text">흡입력이 좋은 청소기!, 필터는 따로 구매 필요합니다.</p>
+                        <h6 class="card-subtitle mb-2 text-muted">10만원</h6>
+                        <p class="card-text">흡입력이 좋은 청소기! 필터는 따로 구매 필요합니다.</p>
                         <a href="https://spartacodingclub.kr/" class="card-link stretched-link" target="_blank"></a>
                     </div>
                 </div>
